Todas las paginas y tienen el /style/web.css , a algunas les coloque los divs. A los juegos no para evitar que no kedaran bien.

--- a/Style/web.css
+++ b/Style/web.css
@@ -2,7 +2,7 @@
 /* CSS Document */
 .TituloDerivado {
 	font-size: x-large;
-	font-family: Arial, Helvetica, sans-serif;
+	font-family: Helvetica, Verdana, Arial, sans-serif;
 }
 .Navegacion {font-size: medium; font-family: Arial, Helvetica, sans-serif; }
 .Banner {font-size: xx-large; font-family: Arial, Helvetica, sans-serif; }
