--- a/Style/web.css
+++ b/Style/web.css
@@ -55,6 +55,14 @@
 	height:50px;
 }
 
+#botonesChicos {
+	margin-top: 1%;
+	margin bottom:auto;
+	margin-right: 30%;
+	margin-left:30%;
+	height:50px;
+}
+
 #datos {
 	margin-top:0%;
 	margin-bottom:0px;
